--- a/efi/meson.build
+++ b/efi/meson.build
@@ -195,7 +195,6 @@ compile_args = ['-Og',
                 '-Wvla',
                 '-std=gnu11',
                 '-fpic',
-                '-fno-pie',
                 '-funsigned-char',
                 '-fshort-wchar',
                 '-ffreestanding',
@@ -338,17 +337,11 @@ if efi_crtdir == join_paths(meson.current_build_dir(), 'crt0')
   fwupd_so_deps += [o_crt0]
 endif
 
-efi_cc_ldflags = []
-foreach flag : efi_ldflags
-  efi_cc_ldflags += ['-Wl,' + flag]
-endforeach
-efi_cc_ldflags += '-fuse-ld=' + cc_ld.path()
-
 so = custom_target('fwup.so',
                    input : o_files,
-                   output : 'fwup.so',
-                   command : [cc.cmd_array(), '-nostdlib', '-o', '@OUTPUT@'] +
-                             efi_cc_ldflags + ['@INPUT@'] +
+                   output : 'fwup1.so',
+                   command : [cc_ld, '-nostdlib', '-o', '@OUTPUT@'] +
+                             efi_ldflags + ['@INPUT@'] +
                              ['-lefi', '-lgnuefi', libgcc_file_name],
                    depends: fwupd_so_deps)
 
