--- a/.github/workflows/ci_runner.yaml
+++ b/.github/workflows/ci_runner.yaml
@@ -3,50 +3,76 @@ name: CI Runner
 on:
   workflow_call:
     inputs:
-      distro:         {type: string, default: 'alpine'}
-      vendor:         {type: string, default: 'linux'}
-      arch:           {type: string, default: 'x86_64'}
-      image:          {type: string, default: 'alpine:latest'}
-      features:       {type: string, default: 'base gnu py3pe gnuefi'}
-      toolchain:      {type: string, default: ''}
+      distro:     {type: string, default: 'alpine'}
+      vendor:     {type: string, default: 'linux'}
+      arch:       {type: string, default: 'x86_64'}
+      image:      {type: string, default: 'alpine:latest'}
+      features:   {type: string, default: 'base gnu py3pe gnuefi'}
+      toolchain:  {type: string, default: ''}
+      build_dir:  {type: string, default: 'build'}
 
 permissions:
   packages: write
   contents: read
 
 jobs:
-  build:
+  job_id:
+    # Wait for https://github.com/orgs/community/discussions/8945
+    name: Get Job ID
     runs-on: ubuntu-latest
+    outputs:
+      job_id: ${{ steps.job_id.outputs.job_id }}
+    steps:
+      - id: job_id
+        uses: qoomon/actions--context@v4
+
+  build:
+    name: Build
+    runs-on: ubuntu-latest
+    needs: job_id
 
     steps:
     - name: Checkout source
       uses: actions/checkout@v4
+
+    - name: Build on Platform
+      uses: ./.github/actions/run-on-platform
+      with: 
+        distro:    ${{ inputs.distro }}
+        vendor:    ${{ inputs.vendor }}
+        arch:      ${{ inputs.arch }}
+        image:     ${{ inputs.image }}
+        features:  ${{ inputs.features }}
+        toolchain: ${{ inputs.toolchain }}
+        build_dir: ${{ inputs.build_dir }}
+        run:        build
     
-    - name: Enable QEMU
-      uses: docker/setup-qemu-action@v3
+    - uses: actions/upload-artifact@v4
       with:
-        platforms: all
+        name: fwupd-${{ github.run_id }}-${{ needs.job_id.outputs.job_id }}
+        path: build/efi/*.efi
+ 
+  test:
+    name: Test
+    runs-on: ubuntu-latest
+    needs: [job_id, build]
 
-    - name: Load install script
-      id: ci_install
-      uses: jaywcjlove/github-action-read-file@main
-      with:
-        path: contrib/ci_install.sh
+    steps:
+    - name: Checkout source
+      uses: actions/checkout@v4
 
-    - name: Run CI inside ${{ inputs.image }}
-      uses: uraimo/run-on-arch-action@v3
+    - uses: actions/download-artifact@v4
       with:
-        arch: ${{ inputs.arch }}
-        distro: ${{ inputs.distro }}
-        base_image: |
-            --platform=${{ inputs.vendor }}/${{ inputs.arch }} ${{ inputs.image }}
-        dockerRunArgs: |
-          --volume "${{ github.workspace }}:/build"
-        #githubToken: ${{ github.token }}
-        install: |         
-          install() {
-          ${{ steps.ci_install.outputs.content }}    
-          }
-          install "${{ inputs.distro }}" ${{ inputs.features }}
-        run: |
-          TOOLCHAIN=${{ inputs.toolchain && inputs.toolchain || '' }} ./contrib/ci_build.sh
+        name: fwupd-${{ github.run_id }}-${{ needs.job_id.outputs.job_id }}
+        path: build/efi/
+
+    - name: Test on Platform
+      uses: ./.github/actions/run-on-platform
+      with: 
+        distro:     ${{ inputs.distro }}
+        vendor:     ${{ inputs.vendor }}
+        arch:       ${{ inputs.arch }}
+        image:      ${{ inputs.image }}
+        features:   'qemu edk2'
+        build_dir:  ${{ inputs.build_dir }}
+        run:        run
