--- a/.github/workflows/ci_run_latest.yaml
+++ b/.github/workflows/ci_run_latest.yaml
@@ -17,8 +17,7 @@ jobs:
         image: [ alpine:latest ]
         arch: [ x86_64, i386, arm, aarch64, riscv64, loongarch64 ]
         features: [ 
-          "base gnu py3pe gnuefi",
-          "base llvm py3pe gnuefi"
+          "base gnu py3pe gnuefi"
         ]
 
     uses: ./.github/workflows/ci_runner.yaml
