--- a/.github/workflows/ci_runner.yaml
+++ b/.github/workflows/ci_runner.yaml
@@ -52,8 +52,8 @@ jobs:
         name: fwupd-efi-${{ inputs.arch }}-${{ github.run_id }}-${{ needs.job_id.outputs.job_id }}
         path: build/efi/*.efi
  
-  test:
-    name: Test
+  run:
+    name: Execute 
     runs-on: ubuntu-latest
     needs: [job_id, build]
 
@@ -81,3 +81,21 @@ jobs:
       with:
         name: fwupd-log-${{ inputs.arch }}-${{ github.run_id }}-${{ needs.job_id.outputs.job_id }}
         path: build/*.efi.log
+
+  test:
+    name: Validate 
+    runs-on: ubuntu-latest
+    needs: [job_id, build, run]
+
+    steps:
+    - name: Checkout source
+      uses: actions/checkout@v4
+
+    - uses: actions/download-artifact@v4
+      with:
+        name: fwupd-log-${{ inputs.arch }}-${{ github.run_id }}-${{ needs.job_id.outputs.job_id }}
+
+    - name: Validate Log
+      run: |
+        set -x
+        ./contrib/ci_validate.sh fwupd*.log
