--- a/.github/actions/run-on-platform/action.yml
+++ b/.github/actions/run-on-platform/action.yml
@@ -41,12 +41,12 @@ runs:
         ${{ steps.ci_install.outputs.content }}    
         }
         set -x
-        [ "$(uname -m)" = "x86_64" ] && [ "${{ inputs.arch }}" = "i386" ] && linux32
+        [ "$(uname -m)" = "x86_64" ] && [ "${{ inputs.arch }}" = "i386" ] && export ARCH=i386
         mkdir -p "${PWD}/${{ inputs.build_dir }}"
         install "${{ inputs.distro }}" ${{ inputs.features }}
       env: |
         TOOLCHAIN: "${{ inputs.toolchain }}"
       run: |
         set -x
-        [ "$(uname -m)" = "x86_64" ] && [ "${{ inputs.arch }}" = "i386" ] && linux32
+        [ "$(uname -m)" = "x86_64" ] && [ "${{ inputs.arch }}" = "i386" ] && export ARCH=i386
          ./contrib/ci_${{ inputs.run }}.sh ${{ inputs.build_dir }}
